--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Projeto Redes Socias</title>
 </head>
 <body>
+    <h1>Olá, mundo!</h1>
     <main>
         <section id="telefone">
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
